package in_myfiles.structural_pattern.decorator

interface IFileOperation {
    fun doOperation(): String
}